--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "ext-json": "*",
-        "illuminate/support": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
         "facade/ignition-contracts": "^1.0",
         "ramsey/uuid": "^3.7|^4.0",
         "stancl/jobpipeline": "^1.0",
@@ -19,7 +19,7 @@
     },
     "require-dev": {
         "vlucas/phpdotenv": "^3.3|^4.0|^5.0",
-        "laravel/framework": "^6.0|^7.0|^8.0",
+        "laravel/framework": "^6.0|^7.0|^8.0|^9.0",
         "orchestra/testbench-browser-kit": "^4.0|^5.0|^6.0",
         "league/flysystem-aws-s3-v3": "~1.0",
         "doctrine/dbal": "^2.10",
